--- a/web/html/form/form1.html
+++ b/web/html/form/form1.html
@@ -10,7 +10,7 @@
         <fieldset>
             <legend>info</legend>
              <label for="number">number:</label>
-        <input type="text" id="number">
+        <input type="text" id="number" name="number">
         <br><br>
         <label for="pass">password</label>
         <input type="password" id="pass" name="pass">
@@ -23,7 +23,7 @@
         <input type="email" id="email" name="email">
         <br><br>
         <label for="">gender</label>
-        <input type="radio" name="gender" value="male">male
+        <input type="radio" name="gender" value="male" >male
         <input type="radio" name="gender" value="feamle">female
         <input type="radio" name="gender" value="others">others
 </fieldset>
@@ -64,7 +64,6 @@
         <br><br>
         <fieldset>
 <legend>feedback</legend>
-<label for=""></label>
 <textarea name="" id=""></textarea>
 
         </fieldset>
