--- a/web/css/display grid/caleasy.html
+++ b/web/css/display grid/caleasy.html
@@ -60,17 +60,24 @@
             grid-column-start: 4;
             grid-column-end: 5;
         } */
+         .box
     </style>
 </head>
 <body>
     <!-- <img src="https://cdn-media-1.freecodecamp.org/images/1*_tl8E-Ui_n4f3W_bTk_AnQ.png" alt=""> -->
     <div class="container">
-      <div class="box">
+      <div class="box1">
 
       </div>
-      <div class="box2"></div>
+      <div class="box2"> </div>
       <div class="box3"></div>
       <div class="box4"></div>
+      <div class="box5"></div>
+      <div class="box6"> </div>
+      <div class="box7"></div>
+      <div class="box8"></div>
+      <div class="box9"></div>
+    <div class="box10"></div>
     </div>
 </body>
 </html>
