--- a/web/css/display grid/howework/homework2.html
+++ b/web/css/display grid/howework/homework2.html
@@ -4,20 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-.conttainer{
-    
-}
-    </style>
+<style>
+        
+
+
+
+ .container{
+            height: 100%;
+            /* width: 100%; */
+            border: 2px solid black;
+            display: grid;
+            /* grid-template-columns: 100px 200px 100px;
+            grid-template-rows: 100px 200px 100px; */
+            /* grid-template-columns: auto auto auto auto;
+            grid-template-rows: auto auto auto; */
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 50% 50%;
+            gap: 20px;
+
+        }
+        .box{
+            grid-area: 1/1/2/2;
+
+        }
+        .box2{
+           grid-area:2/1/3/2 ;
+
+        }
+        .box3{
+
+            grid-row-start: 1;
+            grid-row-end: 2;
+            grid-column-start: 2;
+            grid-column-end: 3;
+
+
+
+        }
+        .box4{
+             /* background-color: rgb(150, 156, 150); */
+            grid-row-start: 2;
+            grid-row-end: 3;
+            grid-column-start: 2;
+            grid-column-end: 3;
+
+        }
+        /* grs/gcs/gre/gce */
+
+        body{
+            justify-content: center;
+            justify-items: center;
+        }
+            .par{
+        font-size: 25px;
+        line-height: 1.6;
+
+        color: #333;
+        margin-bottom: 20px;
+        margin-left: 20px;
+        margin-right: 40px;
+        }
+
+            img{
+                border-radius: 20px;
+                margin-bottom: 40px;
+                margin-right: 40px;
+                margin-left: 40px;
+            }
+            h1{
+                text-align: left;
+                margin-left: 10px;
+            }
+
+
+
+</style>
 
 
 </head>
 <body>
-    <section class="container">
-        <div class=""></div>
-        <div class=""> </div>
-        <div class=""></div>
-        <div class=""></div>
-    </section>
+      <div class="container">
+      <div class="box"><img src="./image copy.png" alt=""></div>
+      <div class="box2 text">
+        <h1>Original & sustainable</h1>
+        <p class="par">We design products for real people living in real homes. We believe that living spaces can be both functional and stunning. That’s why each of our products serves a practical purpose while maintaining an obvious aesthetic appeal.</p>
+        <button>LEARN MORE</button>
+    </div>
+      <div class="box3 text">
+        <h1>Gorgeous & practical</h1>
+        <p class="par">Each product we offer is as unique as the artist who made it. Our entire collection is crafted using locally sourced, non-toxic materials including repurposed wood and recycled glass. That way we create with the environment in mind.
+            </p>
+           <button>LEARN MORE</button>
+    </div>
+      <div class="box4"><img src="./image.png" alt=""></div>
+
+    </div>
 </body>
 </html>
