--- a/web/css/display grid/class.html
+++ b/web/css/display grid/class.html
@@ -33,10 +33,8 @@
         }
         .box{
             background-color: red;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            grid-column-start: 1;
-            grid-column-end: 3;
+           
+            grid-area: 1/1/3/3;
         }
         .box2{
             background-color: blue;
@@ -59,6 +57,10 @@
             grid-column-start: 4;
             grid-column-end: 5;
         }
+        .box5{
+            background-color: rgb(0, 191, 255);
+            grid-area: 3/1/4/3;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +71,7 @@
       <div class="box2"></div>
       <div class="box3"></div>
       <div class="box4"></div>
+       <div class="box5"></div>
     </div>
 </body>
 </html>
