update and positon

--- a/web/tasks/task2/card.html
+++ b/web/tasks/task2/card.html
@@ -43,7 +43,7 @@
 
       width: 320px;
 
-      border-radius: 20px;
+      border-radius:30px;
 
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
 
@@ -65,7 +65,7 @@
 
       object-fit: cover;
 
-      margin-bottom: 15px;
+      margin: 15px;
 
     }
 
