--- a/web/tasks/task4/shoes.html
+++ b/web/tasks/task4/shoes.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Nike X OFF-White</title>
+  <title>Document</title>
 
   <style>
 
