strings concept and questions

--- a/web/javaScript/Day1/index.html
+++ b/web/javaScript/Day1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <!-- <script src="./demo.js" defer></script> -->
     <script src="./second.js"defer></script>
+    <script src="./"></script>
 </head>
 <body>
     <button id="btn">BTN</button>
