--- a/web/javaScript/Arrays/index.html
+++ b/web/javaScript/Arrays/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./string.js"> </script> -->
-     <script src="./notes.js"></script>
-     <h1>this is script file here script notes</h1>
+    <script src="./javascipt.js"></script>
 </body>
 </html>
